[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dcoink"
version = "0.1.1"
description = "The official Python SDK for dco.ink - A minimalist and developer-friendly URL shortener"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "dco.ink", email = "hello@dco.ink" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "httpx>=0.24.0"
]

[project.urls]
"Homepage" = "https://dco.ink"
"Source" = "https://github.com/dco/dco-ink-tools"

[project.scripts]
dcoink = "dcoink.cli:main"
